--- a/src/app.styl
+++ b/src/app.styl
@@ -1,8 +1,69 @@
 // @import "@tarojs/taro/html.css";
 
-:root {
-  --color-title: red;
+page {
+  --str-color-primary: 13, 90, 254
+  --str-color-bg-0: 11, 11, 11
+  --str-color-bg-1: 13, 90, 254
+  --str-color-bg-2: 13, 90, 254
+
+  --font-weight-bold: 500;
+  --font-weight-medium: 400;
+  --font-weight-light: 300;
+  --reach-dialog: 1;
+
+  --color-page-bg #fff
+  --color-title #2f3742
+  --color-title-light rgba(13, 90, 254, 0.05)
+  --color-text #687583
+  --color-primary s('rgba(var(--str-color-primary), 1)')
+  --color-module-bg #fcfdff
+  --color-module-circle #EBF1FF
+  --color-module-bar #F9FBFF
+  --color-home-dark s('rgba(var(--str-color-bg-1), 1)')
+  --color-home-light s('rgba(var(--str-color-bg-2), 1)')
+
+  --color-secondary: hsl(333deg, 100%, 45%);
+  --color-tertiary: hsl(255deg, 85%, 30%);
+  --color-decorative: hsl(200deg, 75%, 65%);
+  --color-muted: hsl(210deg, 55%, 92%);
+  --color-muted-background: hsla(210deg, 55%, 92%, 0.85);
+  --color-info: hsl(245deg, 100%, 60%);
+  --color-success: hsl(160deg, 100%, 40%);
+  --color-success-background: hsla(160deg, 100%, 40%, 0.1);
+  --color-error: hsl(340deg, 95%, 50%);
+  --color-error-background: hsla(340deg, 95%, 43%, 0.1);
+  --color-alert: hsl(37deg, 100%, 50%);
+  --color-alert-background: hsla(52deg, 100%, 50%, 0.25);
+  --color-venn-0: hsl(190deg, 100%, 65%);
+  --color-venn-1: hsl(340deg, 100%, 65%);
+  --color-gray-100: hsl(225deg, 25%, 95%);
+  --color-gray-200: hsl(225deg, 16%, 90%);
+  --color-gray-300: hsl(225deg, 8%, 80%);
+  --color-gray-400: hsl(225deg, 8%, 70%);
+  --color-gray-500: hsl(225deg, 7%, 60%);
+  --color-gray-600: hsl(225deg, 15%, 50%);
+  --color-gray-700: hsl(225deg, 12%, 40%);
+  --color-gray-800: hsl(225deg, 18%, 30%);
+  --color-gray-900: hsl(225deg, 25%, 20%);
+  --color-gray-1000: hsl(225deg, 15%, 15%);
+  --color-subtle-background: hsl(225deg, 25%, 95%);
+  --color-subtle-floating: hsl(0deg, 0%, 100%);
+
+  --syntax-bg hsl(225deg, 25%, 97%)
+  --syntax-highlight hsl(225deg, 25%, 93%)
+  --syntax-txt #2A2A2A
+  --syntax-comment #467790
+  --syntax-prop #da0079
+  --syntax-bool #bf00b8
+  --syntax-val #78909C
+  --syntax-str #651fff
+  --syntax-name #AA00FF
+  --syntax-del rgb(255, 85, 85)
+  --syntax-regex #3600d6
+  --syntax-fn #3D5AFE
+
 }
+
 .h5-span {
   display: inline;
 }
