--- a/src/components/module-title/styles.styl
+++ b/src/components/module-title/styles.styl
@@ -3,7 +3,7 @@
   line-height 1.4
   margin-bottom 50px
 
-  &:before
+  h3
     content: attr(data-sub-title);
     color var(--color-title-light)
     transition: all 0.5s ease
