--- a/src/pages/index/components/open-resource/styles.styl
+++ b/src/pages/index/components/open-resource/styles.styl
@@ -56,7 +56,7 @@ html.mode-dark
         background var(--color-module-circle) 
         border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%;
         animation border-transform 6s infinite
-        // background: url(/images/open-resources/3d-swiper-bg-mini.png) no-repeat center center
+        // background: url(https://www.xiaoxili.com/images/open-resources/3d-swiper-bg-mini.png) no-repeat center center
         background-size: 100%
         
       .item-icon-img
