--- a/src/pages/index/components/blog-post/styles.styl
+++ b/src/pages/index/components/blog-post/styles.styl
@@ -19,8 +19,8 @@ html.mode-dark
 
       .pic
         display block
-        height auto
-        width 100%
+        height 258px
+        width 343px
 
       .title
         margin 20px 16px 8px
@@ -105,7 +105,7 @@ html.mode-dark
             &:after
               content ''
               display inline-block
-              background url(/images/icon-arraw-right.png) no-repeat
+              background url(https://www.xiaoxili.com/images/icon-arraw-right.png) no-repeat
               width 21px
               height 4px
               vertical-align middle
