--- a/src/pages/index/components/introduction/styles.styl
+++ b/src/pages/index/components/introduction/styles.styl
@@ -138,7 +138,7 @@ html.mode-dark
         .desc-content-group
           width 32px
           height 15px
-          background url("/images/group.png") no-repeat 100%
+          background url("https://www.xiaoxili.com/images/group.png") no-repeat 100%
           margin 32px 0
           cursor pointer
     .feature
