--- a/src/pages/index/components/blog-post/styles.styl
+++ b/src/pages/index/components/blog-post/styles.styl
@@ -20,7 +20,7 @@ html.mode-dark
       .pic
         display block
         height 258px
-        width 343px
+        width 100%
 
       .title
         margin 20px 16px 8px
