--- a/src/pages/index/components/introduction/styles.styl
+++ b/src/pages/index/components/introduction/styles.styl
@@ -1,8 +1,8 @@
 html.mode-dark
   .home-introduction
-    .desc-bitmap img
+    .desc-bitmap .pic
       filter brightness(.6) contrast(1.2);
-    .feature > li >img
+    .feature > li >.pic
       filter invert(1) hue-rotate(180deg)
       
 .home-introduction
@@ -23,9 +23,8 @@ html.mode-dark
       width 100%
       height auto
       outline none
-      img
-        object-fit cover
-        transition: all 0.5s ease 0.2s
+      .pic
+        width 100%
     .desc-content
       overflow hidden
       padding 16px
@@ -86,6 +85,10 @@ html.mode-dark
       &:nth-child(2)
       &:nth-child(3)
         margin-bottom 21px
+
+      .pic
+        width 60px
+        height: 75px
 
       >h3
         font-size 36px
