--- a/src/pages/index/components/tech-sharing/styles.styl
+++ b/src/pages/index/components/tech-sharing/styles.styl
@@ -27,6 +27,9 @@ html.mode-dark
         display block
         width: 100%;
         height: auto
+
+        .pic
+          width 100%
       
       .item-bar
         position relative
