--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -1,12 +1,8 @@
-.test {
-  // position: fixed;
-  // bottom: 0;
-  width: 200px;
-  height: 200px;
-  background-color: skyblue;
-  transform: translateY(100%);
-  transition: transform .3s ease-in;
-}
-.test-show{
-  transform: translateY(0);
-}
+.page-home
+  .header
+    position fixed
+    left 0
+    right 0
+.with-header-transparent
+  .header
+    background s('rgba(var(--str-color-bg-1), 0)')
