--- a/src/pages/index/components/blog-post/styles.styl
+++ b/src/pages/index/components/blog-post/styles.styl
@@ -106,6 +106,7 @@ html.mode-dark
               content ''
               display inline-block
               background url(https://www.xiaoxili.com/images/icon-arraw-right.png) no-repeat
+              background-size contain
               width 21px
               height 4px
               vertical-align middle
