--- a/src/pages/index/components/open-resource/styles.styl
+++ b/src/pages/index/components/open-resource/styles.styl
@@ -84,6 +84,7 @@ html.mode-dark
       > p
         font-weight: 400
         font-size 12px
+        line-height 20px
         color: var(--color-text)
               
           
